# ARCHIMEDESTERM

./: .deployignore  .replit  README.md  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  tailwind.config.ts  test-ai-modes.sh  tsconfig.json  tts_spanish.py  vite.config.ts
attached_assets/: 123_1760139433218.wsz  Be_Strong_Like_Superman_1762294986745.wsz  Calvin_And_Hobbes_Tribute_1762294986747.wsz  Commodore64_1760224502056.wsz  DonkeyKong_1760202832013.wsz  Jet_Set_Willy_1760224502056.wsz  Lum_KAWAII_1760224502059.wsz  Marshall_Amp_1760202832015.wsz  MatriX_v1_0_1760139379904.wsz  NGE_Winamp_-_2015_1762294986749.wsz  NOKIA702V1-5_1760224502060.wsz  O10f1_4_1760224502062.wsz  Panasonic_06_1760224502061.wsz  Pasted--ARCHIMEDES-TECHNICAL-CHRONICLE-PYTHON-CALCULATOR-SIMULATION-Decentralized-User-Controlled-Ari-1763045297201_1763045297201.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content-1757985475850_1757985475852.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content-wi-1758397221145_1758397221146.txt  Pasted--FREESTYLE-MODE-Interactive-Calculator-with-Visual-Inte_1767046453646.txt  Pasted--FREESTYLE-MODE-Interactive-Calculator-with-Visual-Interface-This-calculator-uses-input-to-cr-1764632284895_1764632284896.txt  Pasted--import-url-https-fonts-googleapis-com-css-family-Press-Start-2P-dark-270245-light-000-1763212676178_1763212676179.txt  Pasted-Popular-Books-Error-502-DOCTYPE-html-html-lang-en-head-title-Hmm-We-couldn-39-t-r-1757276941821_1757276941822.txt  (+17 more)
(+145 files in other folders)
