[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "matplotlib>=3.10.7",
    "networkx>=3.4.2",
    "pillow>=12.0.0",
    "pygame>=2.6.1",
    "pyvirtualdisplay>=3.0",
    "requests>=2.32.3",
    "rich>=13.9.4",
]
